service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-todo-service
  namespace: django-todo-app
spec:
  selector:
    app: django-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 8001          # exposed service port
      targetPort: 8001    # container's internal port
      nodePort: 31122     # optional (must be between 30000–32767)
