ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-todo-ingress
  namespace: django-todo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: django-todo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-todo-service
                port:
                  number: 8001
